# Dennp-Clothes-POS

./: .gitignore  ADD_PRINT_BUTTONS.tsx  ADD_PRINT_TO_MODAL_HEADER.tsx  BACKEND_ADDRESS_API.md  BACKEND_COMPLETE.md  BACKEND_MODEL_ALIGNMENT.md  BACKEND_REDESIGN_MULTI_BRANCH.md  BACKEND_STARTUP_GUIDE.md  BEST_PRINT_SOLUTION.ts  CLIENT_SETUP_GUIDE.md  COMPLETION_REPORT.md  COMPLETION_SUMMARY.md  CONTROLLER_REDESIGN_MULTI_BRANCH.md  CONVERSION_SUMMARY.md  DATABASE_FIXES.sql  DATABASE_QUICK_START.md  DATABASE_SCHEMA_ANALYSIS.md  DATABASE_SCHEMA_GUIDE.md  DATABASE_VALIDATION_CHECKLIST.md  DATA_POPULATION_SUMMARY.md  DEBUGGING_TRACKING_NUMBER.md  DEBUG_ORDER_FILTERING_REPORT.md  DEBUG_PRINT_COMMAND.ts  DEPLOYMENT_READY.md  DESIGN_MOCKUP_EDIT_ORDER.md  DESIGN_PLAN_ORDER_EDITING.md  DESIGN_UPDATE_ADDRESS_SECTION.md  DESKTOP_APP_CHECKLIST.md  EDIT_ORDER_COMPLETION.md  EDIT_ORDER_VISUAL_GUIDE.md  FILES_CREATED.md  FINAL_PRINTBILL_FIX.ts  FINAL_UPDATES.md  FIXED_ORDERSPAGE_PRINTBILL.ts  FIXED_TAURI_PRINT.rs  FIXED_printBill.ts  FIXED_printBill_FULL_A4.ts  FIXED_printBill_IMAGE.ts  FRONTEND_REDESIGN_MULTI_BRANCH.md  HOSTINGER_ORDER_ITEMS_GUIDE.md  (+74 more)
.claude/: settings.local.json
admin-dashboard/: .env.example  index.html  package.json  tsconfig.json  vite.config.ts
backend/: .env.example  API_DOCUMENTATION.md  BACKEND_SETUP.md  alter-payment-notes-add-payment-method.sql  check-bank-accounts.js  check-order-29.js  check-payments.js  check-schema.js  create-payment-notes-table.sql  debug_stock.js  (+10 more)
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: main.rs
(+137 files in other folders)
