[package]
name = "dennep-pos-desktop"
version = "1.0.0"
description = "Dennep Clothes POS Desktop Application"
authors = ["Dennep Team"]
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = [ "shell-execute", "os-all", "dialog-ask", "dialog-message", "dialog-confirm", "dialog-open", "dialog-save", "window-all", "shell-open", "fs-all", "path-all"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[[bin]]
name = "dennep-pos-desktop"
path = "src/main.rs"
